release: 1.2.0 - drop Java 21 requirement, target Java 17
Replace Java 21-only constructs with Java 17-compatible equivalents:
- switch with pattern + when guard -> instanceof chain (PageTypeSchemaHandler)
- List.getFirst() -> List.get(0) (RequestBodyProcessorImpl, ResponseProcessorImpl, AnnotationAttributeUtils)
- instanceof Schema<?> on already-typed expression -> Object intermediate (SchemaAnnotationEnricher, ValidationSchemaEnricher)